--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="">Explorar</a>
                     </li>
                     <li class="nav-item me-3" th:if="${session.usuariosession != null}"
-                        sec:authorize="hasAnyRole('ADMIN', 'DISENIADOR')">
+                        sec:authorize="hasRole('DISENIADOR')">
                         <a class="nav-link" href="/disenador/crear">Crear</a>
                     </li>
                     <li class="nav-item me-3" th:if="${session.usuariosession != null}"
