--- a/backend/src/main/resources/static/css/styles.css
+++ b/backend/src/main/resources/static/css/styles.css
@@ -229,13 +229,14 @@ nav a {
 }
 .vista-publicaciones{
     background-image: url('../img/fondoBanner.png');
+    background-size: cover;
 }
 .vista-comentarios{
     background-image: url('../img/fondoFaq.png');    
 }
 
 .table-container {
-    width: 60%;
+    width: 80%;
     max-height: 33vw;
     overflow: auto;    
 }
@@ -268,7 +269,7 @@ nav a {
 }
 
 .custom-table thead {
-    border-radius: 10px 10px 0 0;
+    border-radius: 10px 10px 1px 1px;
 }
 
 .custom-table tbody {
@@ -329,9 +330,13 @@ nav a {
 }*/
 
 .flexible-table td,thead {
-  flex: 1;   
-  padding: 8px;
+  flex: 1;  
+  padding-bottom: 5px;
+  padding-top: 5px;
+  padding-right: 30px;
+  padding-left: 15px;
   border: 1px solid #ccc;
-  min-height: 50px;  
+  min-height: 80px;  
+  min-width: 200px;
 }
 
