--- a/backend/src/main/resources/templates/dashboard.html
+++ b/backend/src/main/resources/templates/dashboard.html
@@ -55,7 +55,7 @@
                     <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="foto-perfil" width="35"
-                            height="35" class="rounded-circle" id="img-cover" />
+                            height="35" class="rounded-circle" id="img-cover"  onerror="this.src='/img/fotoDefault.jpg'" />
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end text-small">
                         <li th:if="${session.usuariosession != null}"
