--- a/backend/src/main/resources/static/css/styles.css
+++ b/backend/src/main/resources/static/css/styles.css
@@ -340,3 +340,61 @@ nav a {
   min-width: 200px;
 }
 
+/*------------------------------------------------------------*/
+.nav  {
+    --bs-nav-link-color: none!important;
+}  
+header{
+    width: 60%;
+    margin: auto;
+    transform: translateY(50px);
+    /* padding: 20px 0; */
+}
+.perfil-container{
+    display: flex;
+}
+.perfil-container img{
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.contenedor-cabezera{
+    margin-left: 100px;
+}
+.cabezera1{
+    width: 290px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    justify-content: space-between;
+}
+.cabezera1 h1{
+    color: #616161;
+    font-weight: 100;
+    font-size: 26px;
+}
+.cabezera1 button{
+    width: 100px;
+    height: 30px;
+    background-color: #fafafa;
+    border: solid #dbdbdb 1px;
+    cursor: pointer;
+}
+.cabezera1 svg{
+    cursor: pointer;
+}
+.cabezera2{
+    display: flex;
+    justify-content: space-between;
+    font-size: 15px;
+    margin-bottom: 15px;
+}
+.cabezera3 h2
+{
+    font-size: 16px;
+    margin-bottom: 5px;
+}
+
+
+
