--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -2,16 +2,193 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet" />
+    <title>FashionNet</title>
+    <style>
+        .dropdown-toggle::after {
+            display: none !important;
+        }
+    </style>
+
 </head>
 
 <body>
-    <h1>mi perfil</h1>
-    <p>Mis publicaciones</p>
 
-    <div class="row row-cols-1 row-cols-md-5 g-4">
+    <div class="perfil-section d-flex vh-100">
+        <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;position: fixed; height: 100%; overflow-y: auto;">
+            <a href="/inicio"
+                class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+                <img src="/img/logo.png" alt="logo" class="bi pe-none me-2" width="40" height="35">
+                <span class="fs-4">FashionNet</span>
+            </a>
+            <hr>
+            <ul class="nav nav-pills flex-column mb-auto">
+                <li class="nav-item">
+                    <a href="/inicio" class="nav-link" aria-current="page">
+                        <svg aria-label="Inicio" class="bi pe-none me-2 _8-yf5 " fill="#262626" height="22"
+                            viewBox="0 0 48 48" width="22">
+                            <path
+                                d="M45.3 48H30c-.8 0-1.5-.7-1.5-1.5V34.2c0-2.6-2-4.6-4.6-4.6s-4.6 2-4.6 4.6v12.3c0 .8-.7 1.5-1.5 1.5H2.5c-.8 0-1.5-.7-1.5-1.5V23c0-.4.2-.8.4-1.1L22.9.4c.6-.6 1.5-.6 2.1 0l21.5 21.5c.4.4.6 1.1.3 1.6 0 .1-.1.1-.1.2v22.8c.1.8-.6 1.5-1.4 1.5zm-13.8-3h12.3V23.4L24 3.6l-20 20V45h12.3V34.2c0-4.3 3.3-7.6 7.6-7.6s7.6 3.3 7.6 7.6V45z">
+                            </path>
+                        </svg>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="/disenador/crear" class="nav-link link-body-emphasis">
+                        <svg aria-label="Nueva publicación" class="bi pe-none me-2 _ab6-" color="rgb(0, 0, 0)"
+                            fill="rgb(0, 0, 0)" height="22" role="img" viewBox="0 0 24 24" width="22">
+                            <path
+                                d="M2 12v3.45c0 2.849.698 4.005 1.606 4.944.94.909 2.098 1.608 4.946 1.608h6.896c2.848 0 4.006-.7 4.946-1.608C21.302 19.455 22 18.3 22 15.45V8.552c0-2.849-.698-4.006-1.606-4.945C19.454 2.7 18.296 2 15.448 2H8.552c-2.848 0-4.006.699-4.946 1.607C2.698 4.547 2 5.703 2 8.552Z"
+                                fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="2"></path>
+                            <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="2" x1="6.545" x2="17.455" y1="12.001" y2="12.001"></line>
+                            <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                                stroke-width="2" x1="12.003" x2="12.003" y1="6.545" y2="17.455"></line>
+                        </svg>
+                        Publicar
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link link-body-emphasis">
+                        <svg aria-label="Buscar personas" class="bi pe-none me-2 _8-yf5 " fill="#262626" height="22"
+                            viewBox="0 0 48 48" width="22">
+                            <path clip-rule="evenodd"
+                                d="M24 0C10.8 0 0 10.8 0 24s10.8 24 24 24 24-10.8 24-24S37.2 0 24 0zm0 45C12.4 45 3 35.6 3 24S12.4 3 24 3s21 9.4 21 21-9.4 21-21 21zm10.2-33.2l-14.8 7c-.3.1-.6.4-.7.7l-7 14.8c-.3.6-.2 1.3.3 1.7.3.3.7.4 1.1.4.2 0 .4 0 .6-.1l14.8-7c.3-.1.6-.4.7-.7l7-14.8c.3-.6.2-1.3-.3-1.7-.4-.5-1.1-.6-1.7-.3zm-7.4 15l-5.5-5.5 10.5-5-5 10.5z"
+                                fill-rule="evenodd"></path>
+                        </svg>
+                        Explorar
+                    </a>
+                </li>
+                <li class="">
+                    <a href="/perfil"
+                        class="d-flex align-items-center nav-link link-body-emphasis text-decoration-none">
+                        <img src="https://vivolabs.es/wp-content/uploads/2022/03/perfil-mujer-vivo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                        Perfil
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <div class="dropdown">
+                <a href="#" class="d-flex align-items-center link-body-emphasis text-decoration-none dropdown-toggle"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+
+                    <svg aria-label="Configuración" class="bi pe-none _ab6-" color="rgb(0, 0, 0)" fill="rgb(0, 0, 0)"
+                        height="24" role="img" viewBox="0 0 24 24" width="24">
+                        <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="2" x1="3" x2="21" y1="4" y2="4"></line>
+                        <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="2" x1="3" x2="21" y1="12" y2="12"></line>
+                        <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                            stroke-width="2" x1="3" x2="21" y1="20" y2="20"></line>
+                    </svg>
+                    <span style="padding-left: 5px;">Más</span>
+                </a>
+                <ul class="dropdown-menu text-small shadow">
+                    <li><a class="dropdown-item" href="/editar_perfil">Editar perfil</a></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><a class="dropdown-item" href="/logout">Cerrar sesión</a></li>
+                </ul>
+            </div>
+        </div>
+        <header style="margin-left: 280px; width: calc(100% - 280px); overflow-y: auto;">
+            <div class="perfil-container justify-content-center">
+                <img class="img-perfil" src="https://vivolabs.es/wp-content/uploads/2022/03/perfil-mujer-vivo.png" alt="">
+                
+                <div class="contenedor-cabezera">
+                    <div class="cabezera1">
+                        <h1>anafer</h1>
+                        
+                        <svg aria-label="Opciones" class="_8-yf5 " fill="#262626" height="24" viewBox="0 0 48 48"
+                            width="24">
+                            <path clip-rule="evenodd"
+                                d="M46.7 20.6l-2.1-1.1c-.4-.2-.7-.5-.8-1-.5-1.6-1.1-3.2-1.9-4.7-.2-.4-.3-.8-.1-1.2l.8-2.3c.2-.5 0-1.1-.4-1.5l-2.9-2.9c-.4-.4-1-.5-1.5-.4l-2.3.8c-.4.1-.8.1-1.2-.1-1.4-.8-3-1.5-4.6-1.9-.4-.1-.8-.4-1-.8l-1.1-2.2c-.3-.5-.8-.8-1.3-.8h-4.1c-.6 0-1.1.3-1.3.8l-1.1 2.2c-.2.4-.5.7-1 .8-1.6.5-3.2 1.1-4.6 1.9-.4.2-.8.3-1.2.1l-2.3-.8c-.5-.2-1.1 0-1.5.4L5.9 8.8c-.4.4-.5 1-.4 1.5l.8 2.3c.1.4.1.8-.1 1.2-.8 1.5-1.5 3-1.9 4.7-.1.4-.4.8-.8 1l-2.1 1.1c-.5.3-.8.8-.8 1.3V26c0 .6.3 1.1.8 1.3l2.1 1.1c.4.2.7.5.8 1 .5 1.6 1.1 3.2 1.9 4.7.2.4.3.8.1 1.2l-.8 2.3c-.2.5 0 1.1.4 1.5L8.8 42c.4.4 1 .5 1.5.4l2.3-.8c.4-.1.8-.1 1.2.1 1.4.8 3 1.5 4.6 1.9.4.1.8.4 1 .8l1.1 2.2c.3.5.8.8 1.3.8h4.1c.6 0 1.1-.3 1.3-.8l1.1-2.2c.2-.4.5-.7 1-.8 1.6-.5 3.2-1.1 4.6-1.9.4-.2.8-.3 1.2-.1l2.3.8c.5.2 1.1 0 1.5-.4l2.9-2.9c.4-.4.5-1 .4-1.5l-.8-2.3c-.1-.4-.1-.8.1-1.2.8-1.5 1.5-3 1.9-4.7.1-.4.4-.8.8-1l2.1-1.1c.5-.3.8-.8.8-1.3v-4.1c.4-.5.1-1.1-.4-1.3zM24 41.5c-9.7 0-17.5-7.8-17.5-17.5S14.3 6.5 24 6.5 41.5 14.3 41.5 24 33.7 41.5 24 41.5z"
+                                fill-rule="evenodd"></path>
+                        </svg>
+                    </div>
+                    <div class="cabezera2">
+                        <p><b>xx</b> publicaciones</p>
+                        <p><b>xx</b> interacciones</p>
+                        
+                    </div>
+                    <div class="cabezera3">
+                        <h2>Ana Fernandez</h2>
+                        
+                    </div>
+                </div>
+            </div>
+
+            <section class="cards-container">        
+                <div class="container">
+        
+                    <div class="row row-cols-1 row-cols-md-4 g-4">
+                        <div th:each="publicacion : ${publicaciones}" class="col">
+                            <div class="card h-100">
+                               
+                                <img th:src="@{/imagen/publicacion/__${publicacion.id}__}" class="card-img-top" alt="">
+                                <div class="card-footer d-flex align-items-center">
+                                    <div class="btns-right">
+                                        <form th:action="@{/darLike/__${publicacion.id}__}" method="post">
+                                            <button type="submit" class="btn like-btn heart-btn" >                                        
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                                    fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                                    <path fill-rule="evenodd"
+                                                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                                                </svg>
+                                            </button>
+                                        </form>
+                                                                      
+                                        <button type="button" class="btn like-btn">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                                class="bi bi-chat" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
+                                            </svg>
+                                        </button>
+                                        
+                                    </div>
+        
+        
+                                    <div class="dropup btns-left ms-sm-auto">
+                                        <button class="btn" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                                class="bi bi-grip-horizontal" viewBox="0 0 16 16">
+                                                <path
+                                                    d="M2 8a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm3 3a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm0-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+                                            </svg>
+                                        </button>
+                                        <ul class="dropdown-menu dropdown-menu-end">
+                                            <li><a class="dropdown-item" href="#">Reportar</a></li>
+                                            <li><a class="dropdown-item" href="#">Ver publicación</a></li>
+                                            <li><a class="dropdown-item" href="#">Cerrar</a></li>
+                                        </ul>
+                                    </div>
+        
+        
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            
+        </header>
+    </div>
+
+
+
+    <!-- <div class="row row-cols-1 row-cols-md-5 g-4">
         <div th:each="publicacion : ${publicaciones}" class="col-sm-6">
             <div class="card h-100">
                 <div class="card-body">
@@ -30,9 +207,11 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
