--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -72,7 +72,7 @@
                 <li class="">
                     <a href="/perfil"
                         class="d-flex align-items-center nav-link link-body-emphasis text-decoration-none">
-                        <img src="https://vivolabs.es/wp-content/uploads/2022/03/perfil-mujer-vivo.png" alt="" width="32" height="32" class="rounded-circle me-2">
+                        <img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="" width="32" height="32" class="rounded-circle me-2">
                         Perfil
                     </a>
                 </li>
@@ -104,11 +104,11 @@
         </div>
         <header style="margin-left: 280px; width: calc(100% - 280px); overflow-y: auto;">
             <div class="perfil-container justify-content-center">
-                <img class="img-perfil" src="https://vivolabs.es/wp-content/uploads/2022/03/perfil-mujer-vivo.png" alt="">
+                <img class="img-perfil" th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="">
                 
                 <div class="contenedor-cabezera">
                     <div class="cabezera1">
-                        <h1>anafer</h1>
+                        <h1 th:text="${session.usuariosession.nombreUsuario}"></h1>
                         
                         <svg aria-label="Opciones" class="_8-yf5 " fill="#262626" height="24" viewBox="0 0 48 48"
                             width="24">
@@ -123,7 +123,7 @@
                         
                     </div>
                     <div class="cabezera3">
-                        <h2>Ana Fernandez</h2>
+                        <h2 th:text="${session.usuariosession.nombreCompleto}"></h2>
                         
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                                                 </svg>
                                             </button>
                                         </form>
-                                                                      
+                                        <!-- <p th:text="${conteoLike[publicacion.id]}"></p>                              -->
                                         <button type="button" class="btn like-btn">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                                 class="bi bi-chat" viewBox="0 0 16 16">
