--- a/backend/src/main/resources/templates/home.html
+++ b/backend/src/main/resources/templates/home.html
@@ -91,7 +91,7 @@
                                     <img th:src="@{/imagen/perfil/__${publicacion.usuario.id}__}" alt="foto-perfil"
                                         width="35" height="35" class="d-inline-block rounded-circle" id="img-cover" />
                                     <span th:text="${publicacion.usuario.nombreUsuario}"></span>
-                                    <!-- <div style="text-align: end">
+                                     <div style="text-align: end">
                                         <button type="button" class="btn btn-primary">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                                 fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
@@ -107,7 +107,7 @@
                                                     d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
                                             </svg>
                                         </button>
-                                    </div> -->
+                                    </div> 
                                 </div>
                             </div>
                         </div>
@@ -174,8 +174,8 @@
                                     </svg>
                                 </button>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                    <li><a class="dropdown-item" href="#">Reportar</a></li>
-                                    <li><a class="dropdown-item" href="#">Ver publicación</a></li>
+                                    <li><a class="dropdown-item" href="/disenador/reportar">Reportar</a></li>
+                                    <li><a class="dropdown-item" th:href="@{/disenador/ver/__${publicacion.id}__}">Ver publicación</a></li>
                                     <li><a class="dropdown-item" href="#">Cerrar</a></li>
                                 </ul>
                             </div>
