--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -102,7 +102,7 @@
                 </ul>
             </div>
         </div>
-        <header style="margin-left: 280px; width: calc(100% - 280px); overflow-y: auto;">
+        <header style="margin-left: 280px; width: calc(100% - 280px);">
             <div class="perfil-container justify-content-center">
                 <img class="img-perfil" th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="">
                 
@@ -118,8 +118,8 @@
                         </svg>
                     </div>
                     <div class="cabezera2">
-                        <p><b>xx</b> publicaciones</p>
-                        <p><b>xx</b> interacciones</p>
+                        <p><b th:text="${publicaciones.size}">xx</b> publicaciones</p>
+                        <!-- <p><b th:text="${sumatoriaLikes + sumatoriaComentarios}"></b> interacciones</p> -->
                         
                     </div>
                     <div class="cabezera3">
@@ -129,7 +129,7 @@
                 </div>
             </div>
 
-            <section class="cards-container">        
+            <section class="cards-container mt-5 py-3">        
                 <div class="container">
         
                     <div class="row row-cols-1 row-cols-md-4 g-4">
@@ -138,23 +138,24 @@
                                
                                 <img th:src="@{/imagen/publicacion/__${publicacion.id}__}" class="card-img-top" alt="">
                                 <div class="card-footer d-flex align-items-center">
-                                    <div class="btns-right">
-                                        <form th:action="@{/darLike/__${publicacion.id}__}" method="post">
+                                    <div class="btns-right d-flex">
+                                        <form th:action="@{/darLike/__${publicacion.id}__}" method="post" class="d-flex align-items-center">
                                             <button type="submit" class="btn like-btn heart-btn" >                                        
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                    fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
-                                                    <path fill-rule="evenodd"
-                                                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+                                                     fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd"
+                                                      d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
                                                 </svg>
+                                                <span th:text="${conteoLike[publicacion.id]}"></span>
                                             </button>
-                                        </form>
-                                        <!-- <p th:text="${conteoLike[publicacion.id]}"></p>                              -->
+                                        </form>                                
                                         <button type="button" class="btn like-btn">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                                class="bi bi-chat" viewBox="0 0 16 16">
-                                                <path
-                                                    d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
+                                                 class="bi bi-chat" viewBox="0 0 16 16">
+                                            <path
+                                                d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
                                             </svg>
+                                            <span th:text="${conteoComentariosPub[publicacion.id]}"></span>
                                         </button>
                                         
                                     </div>
@@ -170,7 +171,8 @@
                                         </button>
                                         <ul class="dropdown-menu dropdown-menu-end">
                                             <li><a class="dropdown-item" href="#">Reportar</a></li>
-                                            <li><a class="dropdown-item" href="#">Ver publicación</a></li>
+                                            <li><a class="dropdown-item" th:href="@{/disenador/ver/__${publicacion.id}__}">Ver publicación</a></li>
+                                            <li><a role="button" type="submit" class="dropdown-item" th:href= "@{/disenador/eliminar/__${publicacion.id}__}"> Eliminar</a></li>
                                             <li><a class="dropdown-item" href="#">Cerrar</a></li>
                                         </ul>
                                     </div>
