--- a/backend/src/main/resources/templates/publicacion_detalle.html
+++ b/backend/src/main/resources/templates/publicacion_detalle.html
@@ -88,10 +88,10 @@
 
             <div class="card mb-3" style="width: 70%; margin: auto;">
                 <div class="row g-0">
-                    <div class="col-md-8" style="border: 1px rgba(0, 0, 0, 0.175) solid;">
+                    <div class="col-md-7" style="border: 1px rgba(0, 0, 0, 0.175) solid;">
                         <img th:src="@{/imagen/publicacion/__${publicacion.id}__}" style="width: 100%" class="img-fluid rounded-start" alt="...">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-5">
                         <div class="card-body">
                             <div style="background-color: rgba( 33,37,41 , 0.03);">
                                 <div class="container" style="padding: 20px; border-bottom: 1px rgba(0, 0, 0, 0.175) solid;">
@@ -115,13 +115,22 @@
                                     </div>
                                 </div>
                             </div>
-                            <div th:each="comentario : ${comentarios}">
-                                <img th:src="@{/imagen/perfil/__${comentario.usuario.id}__}" alt="foto-perfil" width="35"
-                                     height="35" class="rounded-circle" id="img-cover" onerror="this.src='/img/fotoDefault.jpg'"/>
-                                <p class="card-text" th:text="${comentario.contenido}"></p>
+                            <div style="padding: 20px 20px 0 20px">
+                                <div class="d-flex" style="margin-bottom: 30px" th:each="comentario : ${comentarios}">
+                                    <img th:src="@{/imagen/perfil/__${comentario.usuario.id}__}" alt="foto-perfil" width="35"
+                                         height="35" class="rounded-circle" id="img-cover" onerror="this.src='/img/fotoDefault.jpg'"/>
+                                    <p class="card-text" th:text="${comentario.contenido}"></p>
+                                    <button type="button" class="btn btn-outline-secondary" style="border-color: #dee2e6;">
+                                        <a class="dropdown-item" th:href="@{/reportarComentario_publicacion/__${publicacion.id}__}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-lg" viewBox="0 0 16 16">
+                                            <path d="M7.005 3.1a1 1 0 1 1 1.99 0l-.388 6.35a.61.61 0 0 1-1.214 0L7.005 3.1ZM7 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0Z"/>
+                                            </svg></a>
+                                    </button>
+                                </div>
                             </div>
-                            <div style="background-color: rgba( 33,37,41 , 0.03); padding: 20px; border-top: 1px rgba(0, 0, 0, 0.175) solid;">
-                                <div class="btns-right" style="display:flex;">
+                            <div style="background-color: rgba( 33,37,41 , 0.03); padding: 20px; border-top: 1px rgba(0, 0, 0, 0.175) solid; width: -webkit-fill-available;
+                                 bottom: 0;
+                                 position: absolute;">
+                                <div class="btns-right d-flex">
                                     <form th:action="@{/darLike/__${publicacion.id}__}" method="post">
                                         <button type="submit" class="btn like-btn heart-btn" >                                        
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
@@ -138,15 +147,23 @@
                                         <path
                                             d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z" />
                                         </svg>
-                                        <span th:text="${conteoLike}"></span>
+                                        <span th:text="${conteoComentarios}"></span>
                                     </button>
                                 </div>
-                                <p class="card-text"><small class="text-body-secondary" th:text="${#dates.format(publicacion.fechaPublicacion, 'dd-MMM-yyyy')}"></small></p>
-                                <div class="input-group mb-3">
-                                    <span class="input-group-text" id="basic-addon1"><img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="foto-perfil" width="35"
-                                                                                          height="35" class="rounded-circle" id="img-cover" onerror="this.src='/img/fotoDefault.jpg'"/></span>
-                                    <input type="text" class="form-control" placeholder="Agrega un comentario..." aria-label="Username" aria-describedby="basic-addon1">
-                                </div>
+                                <p class="card-text" style="margin-top: 5px;"><small class="text-body-secondary" th:text="${#dates.format(publicacion.fechaPublicacion, 'dd-MMM-yyyy')}"></small></p>
+                                <form th:action="@{/comentario/crearComentario}" method="post">
+                                    <div class="input-group mb-3">
+
+                                        <span class="input-group-text" id="basic-addon1"><img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="foto-perfil" width="35"
+                                                                                              height="35" class="rounded-circle" id="img-cover" onerror="this.src='/img/fotoDefault.jpg'"/></span>
+                                        <input type="text" name="contenido" class="form-control" placeholder="Agrega un comentario..." aria-label="Username" aria-describedby="basic-addon1" required>
+                                        <button type="submit" class="btn btn-outline-secondary" style="border-color: #dee2e6;">
+                                            <a class="dropdown-item"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cursor-fill" viewBox="0 0 16 16">
+                                                <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z"/>
+                                                </svg></a>
+                                        </button>
+                                    </div>
+                                </form>
                             </div>
                         </div>
                     </div>
