--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -72,7 +72,7 @@
                 <li class="">
                     <a href="/perfil"
                         class="d-flex align-items-center nav-link link-body-emphasis text-decoration-none">
-                        <img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="" width="32" height="32" class="rounded-circle me-2">
+                        <img th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="" width="32" height="32" class="rounded-circle me-2"  onerror="this.src='/img/fotoDefault.jpg'">
                         Perfil
                     </a>
                 </li>
@@ -104,7 +104,7 @@
         </div>
         <header style="margin-left: 280px; width: calc(100% - 280px);">
             <div class="perfil-container justify-content-center">
-                <img class="img-perfil" th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt="">
+                <img class="img-perfil" th:src="@{/imagen/perfil/__${session.usuariosession.id}__}" alt=""  onerror="this.src='/img/fotoDefault.jpg'">
                 
                 <div class="contenedor-cabezera">
                     <div class="cabezera1">
