Redirección a registrar desde btn unete - index

--- a/backend/src/main/resources/templates/index.html
+++ b/backend/src/main/resources/templates/index.html
@@ -54,18 +54,6 @@
 
         </ul>
 
-        <!-- <div class="dropdown text-end">
-                  <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle" />
-                  </a>
-                  <ul class="dropdown-menu dropdown-menu-end text-small">
-                    <li><a class="dropdown-item" href="#">New project...</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li><hr class="dropdown-divider" /></li>
-                    <li><a class="dropdown-item" href="#">Sign out</a></li>
-                  </ul>
-                </div> -->
       </div>
     </div>
   </nav>
@@ -158,7 +146,7 @@
             Valoramos la autenticidad, la inclusión y la colaboración. Creemos en la importancia de expresar tu estilo
             único y encontrar tu voz en el universo de la moda
           </p>
-          <a href="#" class="btn btn-primary">
+          <a href="/registrar" class="btn btn-primary">
             Únete ahora!
           </a>
         </div>
