Agrego sumatoria de likes y comentarios a PanelControlador

--- a/backend/src/main/resources/templates/perfil.html
+++ b/backend/src/main/resources/templates/perfil.html
@@ -119,7 +119,7 @@
                     </div>
                     <div class="cabezera2">
                         <p><b th:text="${publicaciones.size}">xx</b> publicaciones</p>
-                        <!-- <p><b th:text="${sumatoriaLikes + sumatoriaComentarios}"></b> interacciones</p> -->
+                        <p><b th:text="${sumatoriaLikes + sumatoriaComentarios}"></b> interacciones</p>
                                                 
                     </div>
                     <div class="cabezera3">
